demo/config-management-anthos16/out-of-scope/namespaces/store-out-of-scope/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cross-network-gateway
spec:
  selector:
#    istio: eastwestgateway
    app: istio-eastwestgateway-xx
  servers:
  - port:
      number: 15443
      name: tls
      protocol: TLS
    tls:
      mode: AUTO_PASSTHROUGH
    hosts:
    - "*.local"
